--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/autumn-pham/project5/issues"
   },
-  "homepage": "https://github.com/autumn-pham/project5#readme"
+  "homepage": "https://github.com/autumn-pham/project5#readme",
+  "dependencies": {
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "pg": "^8.4.1"
+  }
 }
