--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/autumn-pham/project5#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "method-override": "^3.0.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.4.1"
   }
 }
